--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -6,8 +6,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/button_reset_values"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:text="Reset Values"
+        app:layout_constraintBottom_toBottomOf="@+id/activity_main_webview"
+        app:layout_constraintLeft_toLeftOf="@+id/activity_main_webview"
+        app:layout_constraintRight_toRightOf="@+id/activity_main_webview"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp" />
+
+
     <WebView
         android:id="@+id/activity_main_webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+
+    </WebView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
